[package]
name = "wgpu_session"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
colpetto = { version = "0.6.0", features = ["helper", "tokio", "tracing"] }
diretto = "0.0.7"
input-linux-sys = "0.9.0"
rustix = { version = "1.0.1", features = ["fs"] }
saddle = { version = "0.1.0", path = "../saddle" }
tokio = { version = "1.44.0", features = ["full"] }
tokio-stream = { version = "0.1.17", default-features = false, features = [
    "sync",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
    "env-filter",
    "tracing-log",
] }
wgpu = "24.0.0"

[patch.crates-io]
wgpu = { git = "https://github.com/gfx-rs/wgpu" }
