[package]
name = "wgpu_session"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
colpetto = { version = "0.6.0", features = ["helper", "tokio", "tracing"] }
diretto = "0.0.7"
input-linux-sys = "0.9.0"
rustix = { version = "1.1.2", features = ["fs"] }
saddle = "0.1.1"
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = { version = "0.1.17", default-features = false, features = [
    "sync",
] }
tokio-util = "0.7.16"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = [
    "env-filter",
    "tracing-log",
] }
wgpu = "26.0.1"

[patch.crates-io]
# wgpu = { git = "https://github.com/gfx-rs/wgpu" }
diretto = { path = "../diretto" }
colpetto = { path = "../colpetto" }
